--- a/META.yml
+++ b/META.yml
@@ -28,7 +28,7 @@ no_index:
 provides:
   Test::Docker::Image:
     file: lib/Test/Docker/Image.pm
-    version: '0.01'
+    version: '0.02'
   Test::Docker::Image::Boot:
     file: lib/Test/Docker/Image/Boot.pm
   Test::Docker::Image::Boot::Boot2docker:
@@ -38,12 +38,13 @@ requires:
   Class::Load: '0.22'
   Data::Util: '0.63'
   IPC::Run3: '0.048'
+  URI::Split: '0'
   perl: '5.010001'
 resources:
   bugtracker: https://github.com/iwata/p5-Test-Docker-Image/issues
   homepage: https://github.com/iwata/p5-Test-Docker-Image
   repository: git://github.com/iwata/p5-Test-Docker-Image.git
-version: '0.01'
+version: '0.02'
 x_contributors:
   - 'iwata-motonori <motonori.iwata@dena.com>'
   - 'Motonori Iwata <gootonori+github@gmail.com>'
