--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: "It's new $module, this can handle a Docker image for tests."
 author:
   - 'Motonori Iwata <gootonroi+github@gmail.com>'
 build_requires:
+  Test::Deep: '0.112'
   Test::Mock::Guard: '0.10'
   Test::More: '0.98'
   Test::UseAllModules: '0.15'
@@ -28,7 +29,7 @@ no_index:
 provides:
   Test::Docker::Image:
     file: lib/Test/Docker/Image.pm
-    version: '0.02'
+    version: '0.03'
   Test::Docker::Image::Boot:
     file: lib/Test/Docker/Image/Boot.pm
   Test::Docker::Image::Boot::Boot2docker:
@@ -44,7 +45,7 @@ resources:
   bugtracker: https://github.com/iwata/p5-Test-Docker-Image/issues
   homepage: https://github.com/iwata/p5-Test-Docker-Image
   repository: git://github.com/iwata/p5-Test-Docker-Image.git
-version: '0.02'
+version: '0.03'
 x_contributors:
   - 'iwata-motonori <motonori.iwata@dena.com>'
   - 'Motonori Iwata <gootonori+github@gmail.com>'
