--- a/META.yml
+++ b/META.yml
@@ -29,23 +29,24 @@ no_index:
 provides:
   Test::Docker::Image:
     file: lib/Test/Docker/Image.pm
-    version: '0.03'
+    version: '0.04'
   Test::Docker::Image::Boot:
     file: lib/Test/Docker/Image/Boot.pm
   Test::Docker::Image::Boot::Boot2docker:
     file: lib/Test/Docker/Image/Boot/Boot2docker.pm
+  Test::Docker::Image::Utility:
+    file: lib/Test/Docker/Image/Utility.pm
 requires:
   Class::Accessor::Lite: '0.06'
   Class::Load: '0.22'
   Data::Util: '0.63'
   IPC::Run3: '0.048'
-  URI::Split: '0'
   perl: '5.010001'
 resources:
   bugtracker: https://github.com/iwata/p5-Test-Docker-Image/issues
   homepage: https://github.com/iwata/p5-Test-Docker-Image
   repository: git://github.com/iwata/p5-Test-Docker-Image.git
-version: '0.03'
+version: '0.04'
 x_contributors:
   - 'iwata-motonori <motonori.iwata@dena.com>'
   - 'Motonori Iwata <gootonori+github@gmail.com>'
